--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 ensemble_tools/.ipynb_checkpoints/
 ensemble_tools/__pycache__/
+parameter_ranges/.ipynb_checkpoints/
+parameter_ranges/__pycache__/
+
 
