--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ ensemble_tools/.ipynb_checkpoints/
 ensemble_tools/__pycache__/
 parameter_ranges/.ipynb_checkpoints/
 parameter_ranges/__pycache__/
-
+ensemble_tools/old/.ipynb_checkpoints
 
