--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ ensemble_tools/__pycache__/
 parameter_ranges/.ipynb_checkpoints/
 parameter_ranges/__pycache__/
 ensemble_tools/old/.ipynb_checkpoints
+.ipynb_checkpoints/
 
