updated analysis notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ parameter_ranges/.ipynb_checkpoints/
 parameter_ranges/__pycache__/
 ensemble_tools/old/.ipynb_checkpoints
 .ipynb_checkpoints/
+parameter_ranges/post_ensemble_analysis/.ipynb_checkpoints/analyze_ensemble_output-checkpoint.ipynb
 
